# b2creds

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: credentials.rs  lib.rs
