[package]
name = "b2creds"
version = "0.1.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0"
thiserror = "1.0"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[dev-dependencies]
tempfile = "3.2"
