[package]
name = "b2creds"

description = "Library for accessing b2 credentials"

homepage = "https://github.com/schultetwin1/b2creds/"
repository = "https://github.com/schultetwin1/b2creds/"

version = "0.1.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
thiserror = "1.0"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[dev-dependencies]
tempfile = "3.2"
